--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,232 @@
 /* Add your CSS to this file */
 body {
     margin: 0;
-    font-size: 16px;
+    font-size: 18px;
+	font-family: -apple-system,BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
 }
 
 .container {
     margin: 0 auto;
     max-width: 960px;
     width: 100%;
+	justify-content:space-between;
+	align-items:center;
 }
+
+header{
+	display:flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 20px 0px;
+	background-color:white;
+	color: #333;
+	font-size: 18px;
+}
+.header-left{
+	flex:1;
+}
+
+.header-right{
+	flex:1;
+	text-align:right;
+}
+
+h1{
+	margin:0;
+	padding-left: 20px;
+}
+
+nav ul{
+	display:flex;
+	list-style:none;
+}
+
+nav li{
+	margin-right:20px;
+}
+
+nav a {
+	text-decoration:none;
+	color:#6b7280;
+	transition: color 0.3s;
+}
+nav a:hover {
+	color:#5A67D8;
+}
+
+.overview-hero{
+	background-color: #E2E8F0;
+	padding: 40px 0;
+}
+
+.overview-hero .container{
+	display: flex;
+	align-items: center;
+}
+
+.overview-hero-image{
+	flex: 1;
+	padding: 0 20px;
+}
+.overview-hero-image img{
+	max-width: 100%;
+	height: auto;
+}
+.overview-hero-text{
+	flex: 2;
+	padding: 0 20px;
+}
+.overview-hero h2{
+	font-size: 24px;
+	margin-bottom: 10px;
+}
+.overview-hero p{
+	font-size: 16px;
+	color: #333;
+}
+.learn-about{
+	padding: 40px 0;
+}
+.learn-about h2{
+	font-size:24px;
+	color: #48BB78;
+}
+.cards{
+	display:grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 20px;
+	margin-top:40px;
+}
+.card{
+	background-color: #fff;
+	border: 1px solid #E2E8F0;
+	border-radius: 5px;
+	padding: 20px;
+	text-align: center;
+	box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+.card img{
+	max-width: 100%;
+	height: auto;
+}
+.card h3{
+	font-size: 21px;
+	color: #48BB78;
+	margin-top: 20px;
+}
+.card p{
+	font-size: 16px;
+	color: #333;
+}
+.testing{
+	background-color: #4A5568;
+	padding: 40px 0;
+	color: white;
+}
+.testing-description{
+	flex: 2;
+	padding: 0 20px;
+}
+.testing h2{
+	font-size: 24px;
+	margin-bottom:10px;
+}
+.testing p{
+	font-size:16px;
+	color:white;
+}
+.cta{
+	flex: 1;
+	text-align: right;
+	margin-top: 20px;
+}
+.cta .btn{
+	background-color:#48BB78;
+	color: white;
+	padding: 10px 20px;
+	border-radius: 5px;
+	text-decoration: none;
+	position: relative;
+	
+}
+.stories{
+	padding; 40px 0;
+}
+.stories h2, .stories a{
+	color: #5A67D8;
+}
+.stories img{
+	border-radius: 50%;
+}
+article{
+	display: flex;
+	margin-bottom: 20px;
+	align-items: center;
+}
+article img{
+	max-width: 100px;
+	height: auto;
+	margin-right: 20px;
+}
+.article-body{
+	flex: 1;
+}
+.article-body h3{
+	font-size: 18px;
+	margin: 0;
+}
+.article-body p{
+	font-size: 16px;
+	color: #333;
+}
+.article-body a{
+	text-decoration: none;
+	color; #333;
+}
+.newsletter{
+	text-align: center;
+	padding: 40px 0;
+	background-color: #48BB78;
+	color: white;
+}
+.newsletter form{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.form-group{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 20px;
+}
+#email{
+	padding: 10px;
+	margin-right:10px;
+	border: 1px solid #ccc;
+	width:100%;
+	flex: 1;
+}
+.email-input{
+	flex:1;
+}
+
+.btn{
+	background-color: #5A67D8;
+	color: #white;
+	padding: 10px 20px;
+	text-decoration: none;
+	margin-left: 10px;
+}
+.message{
+	margin-top: 20px;
+}
+footer{
+	background-color: #4A5568;
+	color: white;
+	text-align: center;
+	padding: 20px 0;
+}
+	
+
+	
