--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,14 @@ body {
 	font-family: -apple-system,BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
 }
 
+.container1 {
+    margin: 0 auto;
+    max-width: 960px;
+    width: 100%;
+	justify-content:space-between;
+	align-items:center;
+	display: flex;
+}
 .container {
     margin: 0 auto;
     max-width: 960px;
@@ -23,14 +31,20 @@ header{
 	font-size: 18px;
 }
 .header-left{
-	flex:1;
+   flex:1;
+}
+.header-left h1{
+   margin:0;
+   padding-left: 20px;
 }
 
-.header-right{
-	flex:1;
-	text-align:right;
+.header-right ul{
+	list-style:none;
+	display:flex;
 }
-
+.header-right li{
+    margin-right: 20px;
+}
 h1{
 	margin:0;
 	padding-left: 20px;
@@ -122,16 +136,18 @@ nav a:hover {
 	background-color: #4A5568;
 	padding: 40px 0;
 	color: white;
+	display: flex;
+    align-items: center;
 }
 .testing-description{
 	flex: 2;
 	padding: 0 20px;
 }
-.testing h2{
+.testing-description h2{
 	font-size: 24px;
 	margin-bottom:10px;
 }
-.testing p{
+.testing-description p{
 	font-size:16px;
 	color:white;
 }
@@ -147,6 +163,7 @@ nav a:hover {
 	border-radius: 5px;
 	text-decoration: none;
 	position: relative;
+	 display: inline-block;
 	
 }
 .stories{
@@ -156,6 +173,9 @@ nav a:hover {
 	color: #5A67D8;
 }
 .stories img{
+	max-width: 100px;
+    height: auto;
+    margin-right: 20px;
 	border-radius: 50%;
 }
 article{
@@ -191,8 +211,8 @@ article img{
 }
 .newsletter form{
 	display: flex;
-	flex-direction: column;
-	align-items: center;
+    justify-content: center;
+    align-items: center;
 }
 .form-group{
 	display: flex;
